K8S/ingress-classes.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-1
spec:
  controller: k8s.io/ingress-nginx-1
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-2
spec:
  controller: k8s.io/ingress-nginx-2
