K8S/ingress-controller-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller-1
  namespace: ingress-nginx-1
  labels:
    app.kubernetes.io/name: ingress-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx
    spec:
      containers:
        - name: controller
          image: k8s.gcr.io/ingress-nginx/controller:v1.8.1
          args:
            - /nginx-ingress-controller
            - --controller-class=k8s.io/ingress-nginx-1
            - --ingress-class=nginx-1
            - --election-id=ingress-nginx-1-controller
          ports:
            - containerPort: 80
            - containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-1
  namespace: ingress-nginx-1
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
