K8S/template-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: template-depl
spec:
    replicas: 1
    selector: 
        matchLabels: 
            app: template
    template:
        metadata:
            labels:
                app: template
        spec:
            containers:
                - name: template
                  image: template
                  imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
    name: template-clusterip-srv
spec:
    type: ClusterIP
    selector:
        app: template
    ports:
        - name: template
          protocol: TCP
          port: 8080
          targetPort: 8080
