K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/template
            pathType: Prefix
            backend:
              service:
                name: template-clusterip-srv
                port:
                  number: 8080
          - path: /api/java-1(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: java-1-clusterip-srv
                port:
                  number: 8080
